adjusted some test related to dentist business model

--- a/Server/Views/content/index.ejs
+++ b/Server/Views/content/index.ejs
@@ -26,7 +26,7 @@
                 <div class="lc-block mb-3">
                   <div editable="rich">
                     <div class="fadeIn justify-content-center align-items-center">
-                    <h2 class="fw-bold display-5">WELCOME TO MEGA SURVEY</h2>
+                    <h2 class="fw-bold display-5">Welcome To Book a'Smile</h2>
                     </div>
                   </div>
                 </div>
@@ -34,7 +34,7 @@
                 <div class="lc-block mb-3">
                   <div editable="rich">
                     <div class="fadeIn justify-content-center align-items-center">
-                    <p class="lead">Planning to survey your students, teachers or employees. Start building your own surveys, select from three different models and start customizing. Click the button below to get started!
+                    <p class="lead">Planning to book a Dentist appointment or serving as a professional Dentist in our platform. Start by doing registration, complete your profile and start creating Better Smiles. Click the button below to get started!
                     </p>
                     </div>
                   </div>
@@ -42,7 +42,7 @@
           
                 <div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start">
                   <div class="fadeIn justify-content-center align-items-center">
-                  <a class="btn btn-primary px-4 me-md-2" href="../surveys/add" role="button">Create survey</a>       
+                  <a class="btn btn-primary px-4 me-md-2" href="../surveys/add" role="button">Register</a>       
                   </div>     
                 </div>
           
