--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -14,7 +14,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="../Assets/images/logo_mantis.png" alt="" width="30" height="24"> Mega Survey</a>
+      <a class="navbar-brand" href="/"><img src="../Assets/images/logo_mantis.png" alt="" width="30" height="24"> Book a'Smile</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,9 +30,9 @@
 
           <li class="nav-item">
           <% if(page=='surveys') { %>
-            <a class="nav-link active" href="/surveys"><i class="fas fa-book fa-lg"></i> Surveys List</a>
+            <a class="nav-link active" href="/surveys"><i class="fas fa-book fa-lg"></i> Dentists List</a>
           <% } else { %> 
-            <a class="nav-link" href="/surveys"><i class="fas fa-book fa-lg"></i> Surveys List</a>
+            <a class="nav-link" href="/surveys"><i class="fas fa-book fa-lg"></i> Dentists List</a>
           <% } %>
           </li>
 
