adjusted internal documentation

--- a/Server/Views/content/edituser.ejs
+++ b/Server/Views/content/edituser.ejs
@@ -1,13 +1,23 @@
-<!-- --COMP229 Web Application Development - Mantis Developers Team
-  --Developers's : 
-  ---Name: Ricardo Lopez Tuiran           ---Student ID:301167302 
-  ---Name: Elias Pena Evertz              ---Student ID: 301166037
-  ---Name: Silvana Gjini                  ---Student ID: 301201477
-  ---Name: Paul Kamau                     ---Student ID: 301198424
-  ---Name: Johan Lema Farinango           ---Student ID: 301216096
-  ---Name: Bhupinder Dabb                 ---Student ID: 301187371
-  --Web App name: Mega-Survey
-  --Description: Users will be able to create surveys, answer the surveys, and owners will be able to edit and/or delete their surveys -->
+  <!--COMP231 Web Application Development - Mantis Developers Team
+    --Principal Developers's : 
+    ---Name: Ricardo Lopez Tuiran           ---Student ID:301167302 
+    ---Name: Elias Pena Evertz              ---Student ID: 301166037
+    ---Name: Silvana Gjini                  ---Student ID: 301201477
+    ---Name: Bhupinder Dabb                 ---Student ID: 301187371
+    
+    --Support Team Members (Secondary Developers, UI/UX Designers)    
+    ---Name: Ankit Kodan                    ---Student ID: 
+    ---Name: Rishabh Dev Dogra              ---Student ID:
+    ---Name: Balkaran Singh                 ---Student ID:
+    ---Name: Mehwish Mehmood                ---Student ID:
+    ---Name: Ala’a Al-khdour                ---Student ID:    
+
+    --Web App name: Book a'Smile
+    --Description: The Dental Appointments Management System is a software application that will allow users to register, 
+    --edit and manage their personal accounts, book appointments according to the dentist availability, keep track on appointments 
+    --and have a history of procedures with dates and specific notes.   
+  -->
+  
 <%- include('../partials/header.ejs'); %>
 <!-- Register -->
 <section>
