--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -29,10 +29,10 @@
           </li>
 
           <li class="nav-item">
-          <% if(page=='surveys') { %>
-            <a class="nav-link active" href="/surveys"><i class="fas fa-book fa-lg"></i> Dentists List</a>
+          <% if(page=='dentist') { %>
+            <a class="nav-link active" href="/dentist"><i class="fas fa-book fa-lg"></i> Dentists List</a>
           <% } else { %> 
-            <a class="nav-link" href="/surveys"><i class="fas fa-book fa-lg"></i> Dentists List</a>
+            <a class="nav-link" href="/dentist"><i class="fas fa-book fa-lg"></i> Dentists List</a>
           <% } %>
           </li>
 
