adjusted dentist initial module

--- a/Server/Views/dentist/details.ejs
+++ b/Server/Views/dentist/details.ejs
@@ -100,9 +100,9 @@
                     typeChecked[2] ="checked";
                   } 
 
-                  if (title == "Add Surveys"){
+                  if (title == "Add dentist"){
                     addQuestions = new Array("", "", "", "", "");
-                  } else if (title == "Edit Surveys"){
+                  } else if (title == "Edit dentist"){
                     addQuestions = new Array("", "", "", "", "");
 
                     addQuestions[0] = questions[0].question[0];
@@ -150,7 +150,7 @@
               <br/>
 
               <button type="submit" class="btn btn-primary submit"><i class="fa fa-check-square-o"></i> Submit</button>
-              <a href="/surveys" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
+              <a href="/dentist" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
             </form>
         </div>
       </div>
