--- a/Server/Views/response/response.ejs
+++ b/Server/Views/response/response.ejs
@@ -161,7 +161,7 @@
               <br/>
 
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
-              <a href="/surveys" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
+              <a href="/dentist" class="btn btn-warning"><i class="fa fa-undo"></i> Cancel</a>
             </form>
         </div>
       </div>
