--- a/Server/Views/statistics/statistics.ejs
+++ b/Server/Views/statistics/statistics.ejs
@@ -70,7 +70,7 @@
             <br/>
 
             <button type="submit" class="btn btn-primary btnExport"><i class="fa-solid fa-file-export"></i> Export</button>            
-            <a href="/surveys" class="btn btn-warning"><i class="fa fa-undo"></i> Back</a>            
+            <a href="/dentist" class="btn btn-warning"><i class="fa fa-undo"></i> Back</a>            
           </form>
       </div>
     </div>
