added create profile display page

--- a/Server/Views/content/index.ejs
+++ b/Server/Views/content/index.ejs
@@ -52,7 +52,7 @@
           
                 <div class="lc-block d-grid gap-2 d-md-flex justify-content-md-start">
                   <div class="fadeIn justify-content-center align-items-center">
-                  <a class="btn btn-primary px-4 me-md-2" href="../surveys/add" role="button">Register</a>       
+                  <a class="btn btn-primary px-4 me-md-2" href="../dentist/add" role="button">Register</a>       
                   </div>     
                 </div>
           
