--- a/Server/Views/content/edituser.ejs
+++ b/Server/Views/content/edituser.ejs
@@ -127,7 +127,7 @@
             >
               <i class="fas fa-user-plus"></i> Confirm
             </button>            
-            <a href="/surveys" class="btn btn-outline-dark btn-sm"><i class="fa fa-undo"></i> Cancel</a>
+            <a href="/" class="btn btn-outline-dark btn-sm"><i class="fa fa-undo"></i> Cancel</a>
           </div>
         </form>
       </div>
