--- a/Server/Views/partials/header.ejs
+++ b/Server/Views/partials/header.ejs
@@ -52,6 +52,14 @@
           <% } %>
           </li>
 
+          <!-- <li class="nav-item">
+            <% if(page=='contact') { %>
+              <a class="nav-link active" href="/profile"><i class="fa-solid fa-envelopes-bulk fa-lg"></i> Profile</a>
+            <% } else { %> 
+              <a class="nav-link" href="/profile"><i class="fa-solid fa-envelopes-bulk fa-lg"></i> Profile</a>
+            <% } %>
+            </li> -->
+
           <% if(displayName) { %>   
             <li class="nav-item">
               <% if(page=='edituser') { %>
