adjusted logo image

--- a/Server/Views/content/index.ejs
+++ b/Server/Views/content/index.ejs
@@ -29,7 +29,7 @@
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
                 <div class="fadeIn justify-content-center align-items-center">
-                <img src="..\Assets\images\mantisLanding.png"  class="d-block mx-lg-auto img-fluid" alt="" loading="lazy"> 
+                <img src="..\Assets\images\logoDental.png"  class="d-block mx-lg-auto img-fluid" alt="" loading="lazy"> 
                 </div>
               </div>
               <div class="col-lg-6 text-white">
