--- a/Server/Views/content/about.ejs
+++ b/Server/Views/content/about.ejs
@@ -25,7 +25,7 @@
 <section>
   <div class="container">
     <div class="row" id="tables">
-      <h1><strong>Team Members</strong></h1>
+      <h3>Team Members</h3>
       <div class="row pt-3">
         <div class="col-md-4">
           <div id="tables" class="card mb-4 box-shadow">
